      (And also for the legacy \code{"MacRoman"} encoding.)

      \item Computations of glyph metric information for \code{pdf()}
      and \code{postscript()} did not take into account that
      transliteration could replace one character by two or more (only
      seen on macOS 14) and typically warned that the information was
      not known.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.3.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The default initialization of the \code{"repos"} option
      from the \file{repositories} file at startup can be skipped by
      setting environment variable \env{R_REPOSITORIES} to \code{NULL}
      such that \code{getOption("repos")} is empty if not set elsewhere.

      \item \code{qr.X()} is now an implicit S4 generic in \pkg{methods}.

      \item \code{iconv(to = "ASCII//TRANSLIT")} is emulated using
      substitution on platforms which do not support it (notably Alpine
      Linux).  This should give a human-readable conversion in ASCII on
      all platforms (rather than \code{NA_character_}).

      \item \code{trans3d()} gains options \code{continuous} and
      \code{verbose} addressing the problem of possible \dQuote{wrap
	around} when projecting too long curves, as reported by Achim Zeileis
      in \PR{18537}.

      \item \code{tools::showNonASCII()} has been rewritten to work
      better on macOS 14 (which has a changed implementation of
      \code{iconv()}).

      \item \code{tiff(type = "quartz")} (the default on macOS) now warns
      if \code{compression} is specified: it continues to be ignored.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item There is some support for building with Intel's LLVM-based
      compilers on \samp{x86_64} Linux, such as (C) \command{icx}, (C++)
      \command{ipcx} and (Fortran) \command{ifx} from oneAPI 2023.x.y.

      \item There is support for using LLVM's \command{flang-new} as the